feat: add list barbecue by id
